--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>EveryDay</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
