Rebrand to ✨ EachDay ✨

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>EveryDay</title>
+  <title>EachDay</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
 </head>
