Fixup html wrapper

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
-<head>
-  <title>EachDay</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
-</head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>EachDay</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+  </head>
 
-<body>
-  <div id="root"></div>
-  <!-- Attach React components -->
-  <script type="text/javascript" src="dist/bundle.js"></script>
-</body>
+  <body>
+    <div id="root"></div>
+    <!-- Attach React components -->
+    <script type="text/javascript" src="dist/bundle.js"></script>
+  </body>
+</html>
